--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: frerk.poeppelmeier@unibe.ch
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website of Dr. Frerk Pöppelmeier
   Climate and Environmental Physics, University of Bern, Switzerland
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/index" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: fpoeppelmeier
 
