--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,6 +32,8 @@ theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
 
+minimal_mistakes_skin: "default"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
