--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -34,6 +34,11 @@ plugins:
 
 # minimal_mistakes_skin: "default"
 
+header_pages:
+  - research.markdown
+  - publications.md
+  - CV.md
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
