--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@
 title: Frerk Pöppelmeier
 email: frerk.poeppelmeier@unibe.ch
 description: >- # this means to ignore newlines until "baseurl:"
-  Dr. Frerk Pöppelmeier, Postdoctoral fellow
+  Prof. Dr. Frerk Pöppelmeier
   Climate and Environmental Physics, University of Bern, Switzerland
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
